# technopark_c_second

./: .travis.yml  CMakeLists.txt  README.md  dynamic.c  dynamic_coverage.html  dynamic_test.cpp  general_functions.c  general_functions_test.cpp  interface.h  main.c  static.c  static_coverage.html  static_test.cpp
